DDF-2644 Fix long title text overflow for association links

--- a/catalog/ui/catalog-ui-search/src/main/webapp/component/association/association.less
+++ b/catalog/ui/catalog-ui-search/src/main/webapp/component/association/association.less
@@ -8,6 +8,9 @@
         vertical-align: top;
         width: 33%;
         position: relative;
+        white-space: normal;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     > .association-content > div + div {
